<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DriversMapActivity">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <Button
        android:id="@+id/driver_settings_button"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:background="@drawable/welcome_button"
        android:textColor="@android:color/black"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:text="@string/driverSettingsBtn"
        android:textAllCaps="false"
        android:textSize="20dp"
        />

    <Button
        android:id="@+id/driver_logout_button"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:background="@drawable/welcome_button"
        android:textColor="@android:color/black"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:text="@string/DriverExitBtn"
        android:textAllCaps="false"
        android:textSize="20dp"
        />

    <Button
        android:id="@+id/driver_Approved_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_shape"
        android:textColor="@color/colorUltraGreen"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:text="@string/DriverReadyToOrder"
        android:backgroundTint="@android:color/white"
        android:textAllCaps="false"
        android:textSize="20dp"
        />

</RelativeLayout>